[gd_scene load_steps=5 format=3 uid="uid://c3icjkm4126wy"]

[ext_resource type="Script" uid="uid://bbyg05nsgvpns" path="res://in-game_paused.gd" id="1_w2xev"]
[ext_resource type="FontFile" uid="uid://cq850sbmqa2uk" path="res://main-menu/fonts/Jersey_25/Jersey25-Regular.ttf" id="2_v50yl"]
[ext_resource type="StyleBox" uid="uid://u6y2vjcgfjd2" path="res://main-menu/UI/in-game-paused.tres" id="3_wcd56"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kufw"]
bg_color = Color(0, 0, 0, 0.501961)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 312.0
offset_top = 127.0
offset_right = -261.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2xev")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -323.0
offset_top = -137.0
offset_right = 853.0
offset_bottom = 538.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1kufw")

[node name="continue_button" type="Button" parent="."]
layout_mode = 0
offset_left = -30.0
offset_top = 7.0
offset_right = 211.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_v50yl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_wcd56")
text = "CONTINUE"

[node name="settings_button" type="Button" parent="."]
layout_mode = 0
offset_left = -28.0
offset_top = 89.0
offset_right = 213.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("2_v50yl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_wcd56")
text = "SETTINGS"

[node name="character_button" type="Button" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 171.0
offset_right = 214.0
offset_bottom = 244.0
theme_override_fonts/font = ExtResource("2_v50yl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_wcd56")
text = "CHARACTER"

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = -30.0
offset_top = 253.0
offset_right = 211.0
offset_bottom = 326.0
theme_override_fonts/font = ExtResource("2_v50yl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_wcd56")
text = "QUIT GAME"

[connection signal="pressed" from="continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="character_button" to="." method="_on_character_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
